se convirtieron todas las imagenes jpg al formato WEBP para una mejor metodologia SEO in page

--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
             <h2 class="text-light my-3">Has click en algunos de nuestros productos.</h2>
             <div class="content__cards row">
                 <a href="./pages/productos.html" class="card col-lg-4 col-md-12 col-sm-12 ">
-                    <img src="./assets/img/desk1.jpg" alt="Escritorio corto con bandeja">
+                    <img src="./assets/img/desk1.webp" alt="Escritorio corto con bandeja">
                     <h3 class="text-light fs-3">Desk Large</h3>
                     <p class="text-light fs-6">Escritorio corto con bandeja</p>
                 </a>
                 <a href="./pages/productos.html" class="card col-lg-4 col-md-12 col-sm-12">
-                    <img src="./assets/img/desk3.jpg" alt="Escritorio largo con combinación de melaminas">
+                    <img src="./assets/img/desk3.webp" alt="Escritorio largo con combinación de melaminas">
                     <h3 class="text-light fs-3">Desk XXL</h3>
                     <p class="text-light fs-6">Escritorio largo con variedad de melaminas</p>
                 </a>
                 <a href="./pages/productos.html" class="card col-lg-4 col-md-12 col-sm-12">
-                    <img src="./assets/img/desk2.jpg" alt="Escritorio tamaño mediano de color blanco simple">
+                    <img src="./assets/img/desk2.webp" alt="Escritorio tamaño mediano de color blanco simple">
                     <h3 class="text-light fs-3">Desk XL</h3>
                     <p class="text-light fs-6">Escritorio mediano de melamina simple</p>
                 </a>
