--- a/pages/productos.html
+++ b/pages/productos.html
@@ -58,63 +58,63 @@
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12 mb-3"> <!--col-lg-4 col-md-6 col-sm-12 m-5 text-center-->
           <a>Escritorio corto simple</a>
           <div class="cuadro__img">
-              <img class="img-fluid" src="../assets/img/desk1.jpg" alt="Escritorio para computadoras de color blanco">    
+              <img class="img-fluid" src="../assets/img/desk1.webp" alt="Escritorio para computadoras de color blanco">    
           </div>
         </article>
 
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12 mb-3">
           <a>Escritorio dobles con cajoneras</a>
           <div class="cuadro__img">
-              <img class="img-fluid" src="../assets/img/desk5.jpg" alt="Escritorio de color blanco con cajoneras de color negro">    
+              <img class="img-fluid" src="../assets/img/desk5.webp" alt="Escritorio de color blanco con cajoneras de color negro">    
           </div>
         </article>
 
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12 mb-3">
           <a>Escritorio largo con bandeja</a>
           <div class="cuadro__img">
-              <img class="img-fluid" src="../assets/img/desk3.jpg" alt="Escritorio de color negro con blanco">    
+              <img class="img-fluid" src="../assets/img/desk3.webp" alt="Escritorio de color negro con blanco">    
           </div>
         </article>
 
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
           <a>Escritorio oficina y recepción</a>
           <div class="cuadro__img">
-              <img class="img-fluid" src="../assets/img/desk4.jpg" alt="Simple escritorio de color blanco y beige">    
+              <img class="img-fluid" src="../assets/img/desk4.webp" alt="Simple escritorio de color blanco y beige">    
           </div>
         </article>
 
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
           <a>Escritorio largo sin bandeja</a>
           <div class="cuadro__img">
-              <img class="img-fluid" src="../assets/img/desk2.jpg" alt="Escritorio largo de color blanco">    
+              <img class="img-fluid" src="../assets/img/desk2.webp" alt="Escritorio largo de color blanco">    
           </div>
         </article>
 
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
           <a>Escritorio con cajoneras</a>
           <div class="cuadro__img">
-              <img class="img-fluid" src="../assets/img/desk6.jpg" alt="Escritorio con cajoneras de color beige">    
+              <img class="img-fluid" src="../assets/img/desk6.webp" alt="Escritorio con cajoneras de color beige">    
           </div>
         </article>
         
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
           <a>Escritorio esquinero</a>
           <div class="cuadro__img">
-              <img class="img-fluid" src="../assets/img/desk7.jpg" alt="Escritorio tipo esquinero con bandeja para CPU">    
+              <img class="img-fluid" src="../assets/img/desk7.webp" alt="Escritorio tipo esquinero con bandeja para CPU">    
           </div>
         </article>
 
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
           <a>Escritorio moderno con cajón y archivero</a>
           <div class="cuadro__img">
-              <img class="img-fluid" src="../assets/img/desk8.jpg" alt="Escritorio estilo minimalista color blanco y negro con cajon">    
+              <img class="img-fluid" src="../assets/img/desk8.webp" alt="Escritorio estilo minimalista color blanco y negro con cajon">    
           </div>
         </article>
 
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
           <a>Escritorio L oficina productivo</a>
           <div class="cuadro__img">
-              <img class="img-fluid" src="../assets/img/desk9.jpg" alt="Escritorio estilo oficina con archiveros">    
+              <img class="img-fluid" src="../assets/img/desk9.webp" alt="Escritorio estilo oficina con archiveros">    
           </div>
         </article>
       </div>
