--- a/pages/productos.html
+++ b/pages/productos.html
@@ -47,62 +47,62 @@
           </nav>
     </header>
     <hr class="m-0 py-1 text-light"> <!--linea divisoria-->
-    <main class="main__productos container mb-5">
+    <main class="main__productos container">
       <h1 class="main__tittle d-flex text-center my-5">
         <b></b>
         <span class="text-light mx-4">Nuestros escritorios más destacados</span>
         <b></b>
       </h1>
-      <div class="gale__grid row"> <!-- container-fluid row justify-content-around -->
-        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12 mb-3"> <!--col-lg-4 col-md-6 col-sm-12 m-5 text-center-->
+      <div class="gale__grid row gx-5 gy-4 mb-5 container-fluid">
+        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio corto simple</a>
           <div class="cuadro__img">
               <img class="img-fluid" src="../assets/img/desk1.webp" alt="Escritorio para computadoras de color blanco">    
           </div>
         </article>
-        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12 mb-3">
+        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio dobles con cajoneras</a>
           <div class="cuadro__img">
               <img class="img-fluid" src="../assets/img/desk5.webp" alt="Escritorio de color blanco con cajoneras de color negro">    
           </div>
         </article>
-        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12 mb-3">
+        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio largo con bandeja</a>
           <div class="cuadro__img">
               <img class="img-fluid" src="../assets/img/desk3.webp" alt="Escritorio de color negro con blanco">    
           </div>
         </article>
-        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
+        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio oficina y recepción</a>
           <div class="cuadro__img">
               <img class="img-fluid" src="../assets/img/desk4.webp" alt="Simple escritorio de color blanco y beige">    
           </div>
         </article>
-        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
+        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio largo sin bandeja</a>
           <div class="cuadro__img">
               <img class="img-fluid" src="../assets/img/desk2.webp" alt="Escritorio largo de color blanco">    
           </div>
         </article>
-        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
+        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio con cajoneras</a>
           <div class="cuadro__img">
               <img class="img-fluid" src="../assets/img/desk6.webp" alt="Escritorio con cajoneras de color beige">    
           </div>
         </article>
-        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
+        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio esquinero</a>
           <div class="cuadro__img">
               <img class="img-fluid" src="../assets/img/desk7.webp" alt="Escritorio tipo esquinero con bandeja para CPU">    
           </div>
         </article>
-        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
+        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio moderno con cajón y archivero</a>
           <div class="cuadro__img">
               <img class="img-fluid" src="../assets/img/desk8.webp" alt="Escritorio estilo minimalista color blanco y negro con cajon">    
           </div>
         </article>
-        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12  mb-3">
+        <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio L oficina productivo</a>
           <div class="cuadro__img">
               <img class="img-fluid" src="../assets/img/desk9.webp" alt="Escritorio estilo oficina con archiveros">    
