--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -59,7 +59,7 @@
             <!--Mapa-->
             <div class="col-lg-6 d-flex flex-column pe-lg-5">
                 <h2 class="text-center mb-5 text-light">Visitá nuestra sucursal</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1674.04956875883!2d-60.62923326961257!3d-32.94839190834476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab1dc9b6d36f%3A0x97b9e9584d94d851!2sMonumento%20Hist%C3%B3rico%20Nacional%20a%20la%20Bandera!5e0!3m2!1ses!2sar!4v1681088295661!5m2!1ses!2sar" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1674.04956875883!2d-60.62923326961257!3d-32.94839190834476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab1dc9b6d36f%3A0x97b9e9584d94d851!2sMonumento%20Hist%C3%B3rico%20Nacional%20a%20la%20Bandera!5e0!3m2!1ses!2sar!4v1681088295661!5m2!1ses!2sar" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <hr class="hrMap hrHidden my-5 text-light"> 
             </div>
             <!--Formulario de contacto-->
