se soluciona un problema que causaba un desbordamiento en la seccion de productos (galeria)

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -53,7 +53,7 @@
         <span class="text-light mx-4">Nuestros escritorios más destacados</span>
         <b></b>
       </h1>
-      <div class="gale__grid row gx-5 gy-4 mb-5 container-fluid">
+      <div class="gale__grid row gx-5 gy-4 mb-5 w-auto">
         <article class="container__cuadro col-lg-4 col-md-6 col-sm-12">
           <a>Escritorio corto simple</a>
           <div class="cuadro__img">
