se rediseña la pagina Error 404 y se adapta a mobile.

--- a/pages/404.html
+++ b/pages/404.html
@@ -17,15 +17,11 @@
     <header>
 
     </header>
-    <main class="container-fluid">
-        <div class="container__gen row">
-            <div class="container__img col">
-                <img class="img-fluid" src="../assets/img/svg/404.svg" alt="Esta pagina esta en construccion">
-            </div>
-            <div class="container__text col">
-                    <h1>PAGINA EN MANTENIMIENTO</h1>
-                    <a href="../index.html">INICIO</a>
-            </div>
+    <main class="">
+        <div class="contenedor">
+            <img class="img__404" src="../assets/img/svg/404.svg" alt="Esta pagina esta en construccion">
+            <h1>¡Lo sentimos! Está página está en mantenimiento.</h1>
+            <a class="button fw-bold" href="../index.html">Inicio</a>
         </div>
     </main>
 </body>
