se modifica el meta seo in page de la pagina de inicio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="DeskUP es un sitio web de escritorios modernos para computadoras y oficinas.">
+    <meta name="description" content="DeskUP es una empresa de comercialización de escritorios modernos para computadoras y oficinas, con el fin de mejorar el confort en el area que sea utilizado. Gracias al convenio con empresas de logística más representativas del país, es posible realizar entregas a todo el territorio argentino.">
     <meta name="keywords"  content="escritorios, muebles, oficina, computadora, moderno, minimalista">
     <link rel="shortcut icon" href="./favicon.ico">
 <!--ESTILOS BOOSTRAP-->
